[gd_scene load_steps=7 format=3 uid="uid://cqxmpo12j36s3"]

[ext_resource type="Script" path="res://Scripts/boss_bar.gd" id="1_gn56j"]
[ext_resource type="FontFile" uid="uid://f3uao3iptwlp" path="res://Assets/fonts/PixelOperator8.ttf" id="2_d4lrn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yh0jo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jgjc2"]
bg_color = Color(0, 0.705882, 0.541176, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aak0g"]
bg_color = Color(0.18359, 0.183591, 0.18359, 1)
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0
shadow_color = Color(0, 0, 0, 0.27451)
shadow_offset = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2vfwg"]
bg_color = Color(0.950119, 0.950119, 0.950119, 1)

[node name="BossBar" type="ProgressBar"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -500.0
offset_top = -45.0
offset_right = 500.0
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxEmpty_yh0jo")
theme_override_styles/fill = SubResource("StyleBoxFlat_jgjc2")
value = 60.0
show_percentage = false
script = ExtResource("1_gn56j")

[node name="DamageBar" type="ProgressBar" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_aak0g")
theme_override_styles/fill = SubResource("StyleBoxFlat_2vfwg")
value = 80.0
show_percentage = false

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="BossName" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -51.0
offset_right = 124.0
offset_bottom = -28.0
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_d4lrn")
theme_override_font_sizes/font_size = 16
text = "Boss Name"

[node name="Damaged" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -51.0
offset_bottom = -28.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_d4lrn")
theme_override_font_sizes/font_size = 16
text = "0"
horizontal_alignment = 2

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
